syntax = "proto3";

package todo;

message TodoItem{
    int32 id = 1;
    string todo = 2;
}

message AddTodoRequest{
    TodoItem item = 1;
}

message AddTodoResponse{
    TodoItem item = 1;
}

message GetAllTodosResponse{
    repeated TodoItem items = 1;
}

message NoParams {

}

message Counter {
    int32 counter = 1;
}

service TodoService {
    rpc AddTodo (AddTodoRequest) returns (AddTodoResponse);
    rpc GetAllTodos (NoParams) returns (GetAllTodosResponse);
    rpc GetAllTodosStreaming(NoParams) returns (stream TodoItem);
    rpc CountingTest(stream Counter) returns (stream Counter); 
}